--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest  # 使用 Windows 主机
 
     steps:
       - uses: actions/checkout@v4
@@ -14,13 +14,23 @@ jobs:
       - name: Install Flutter
         run: |
           git clone https://github.com/flutter/flutter.git -b stable
-          echo "$(pwd)/flutter/bin" >> $GITHUB_PATH
+          echo "$env:GITHUB_WORKSPACE\flutter\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
 
       # 安装 Flutter 依赖
       - name: Install Flutter dependencies
         run: flutter pub get
 
+      # 分析项目源代码
+      - name: Analyze project source
+        run: flutter analyze
 
+      # 运行测试
+      - name: Run tests
+        run: flutter test
+
+      # 生成 Rust 桥接代码
+      - name: Generate Rust bridge code
+        run: flutter_rust_bridge_codegen generate
 
       # 编译 Flutter Windows 应用
       - name: Build Flutter Windows Release
