--- a/.github/workflows/Android.yml
+++ b/.github/workflows/Android.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  # ✅ 改为 Linux 环境
 
     permissions:
       contents: write
@@ -38,36 +38,24 @@ jobs:
           echo "Current working directory: $(pwd)"
           ls -la
 
-      # ✅ 清理 Gradle 缓存
-      - name: Clean Gradle Cache
+      # ✅ 切换到 Android 目录
+      - name: Switch to Android directory
         run: |
-          echo "Cleaning Gradle cache..."
-          ./gradlew clean
-          rm -rf ~/.gradle/caches
-          echo "Gradle cache cleaned."
+          cd android
 
-      # ✅ 下载并安装 Flutter
+      # ✅ 安装 Flutter
       - name: Install Flutter
         run: |
           echo "Cloning Flutter stable branch..."
           git clone https://github.com/flutter/flutter.git -b stable
-          echo "Flutter installed."
-
-      # ✅ 将 Flutter 添加到 PATH
-      - name: Add Flutter to PATH
-        run: |
-          echo "$GITHUB_WORKSPACE/flutter/bin" >> $GITHUB_PATH
-
-      # ✅ 验证 Flutter 是否可用（确保 PATH 生效）
-      - name: Verify Flutter
-        run: |
-          export PATH="$GITHUB_WORKSPACE/flutter/bin:$PATH"  # 临时加入 PATH 确保生效
+          echo "Adding Flutter to PATH..."
+          echo "PATH=$GITHUB_WORKSPACE/flutter/bin:$PATH" >> $GITHUB_ENV
+          source $GITHUB_ENV
           flutter --version
 
       # ✅ 安装 Flutter 依赖
       - name: Install Flutter dependencies
         run: |
-          export PATH="$GITHUB_WORKSPACE/flutter/bin:$PATH"
           echo "Fetching Flutter dependencies..."
           flutter pub get
           echo "Flutter dependencies installed."
@@ -75,7 +63,6 @@ jobs:
       # ✅ 构建 Flutter APK
       - name: Build Flutter APK
         run: |
-          export PATH="$GITHUB_WORKSPACE/flutter/bin:$PATH"
           echo "Building Flutter release APK..."
           flutter build apk --release
 
