--- a/.github/workflows/Android.yml
+++ b/.github/workflows/Android.yml
@@ -31,6 +31,7 @@ jobs:
           sudo apt-get install -y clang llvm libclang-dev
           sudo apt-get install -y libc-dev
           sudo apt-get install -y libc6-dev-i386
+          sudo apt-get install -y protobuf-compiler
 
       - name: Configure Rust target
         run: |
