--- a/.github/workflows/Android.yml
+++ b/.github/workflows/Android.yml
@@ -48,9 +48,8 @@ jobs:
 
       - name: 🐦 安装 Flutter
         run: |
-          git clone https://github.com/flutter/flutter.git -b stable
-          echo "PATH=$GITHUB_WORKSPACE/flutter/bin:$PATH" >> $GITHUB_ENV
-          source $GITHUB_ENV
+          git clone https://github.com/flutter/flutter.git -b stable /usr/local/flutter
+          echo "/usr/local/flutter/bin" >> $GITHUB_PATH
           flutter --version
 
       - name: 📚 安装 Flutter 依赖
@@ -61,6 +60,14 @@ jobs:
     runs-on: ubuntu-latest
     needs: setup
     steps:
+      - name: 🛠️ 检出代码仓库
+        uses: actions/checkout@v4
+
+      - name: 🐦 设置 Flutter
+        run: |
+          echo "/usr/local/flutter/bin" >> $GITHUB_PATH
+          flutter --version
+
       - name: 🛠️ 构建全架构 APK (ALL)
         run: |
           flutter build apk --release
@@ -75,6 +82,14 @@ jobs:
     runs-on: ubuntu-latest
     needs: setup
     steps:
+      - name: 🛠️ 检出代码仓库
+        uses: actions/checkout@v4
+
+      - name: 🐦 设置 Flutter
+        run: |
+          echo "/usr/local/flutter/bin" >> $GITHUB_PATH
+          flutter --version
+
       - name: 🛠️ 构建 x86 架构 APK
         run: |
           flutter build apk --release --target-platform android-x86
@@ -89,6 +104,14 @@ jobs:
     runs-on: ubuntu-latest
     needs: setup
     steps:
+      - name: 🛠️ 检出代码仓库
+        uses: actions/checkout@v4
+
+      - name: 🐦 设置 Flutter
+        run: |
+          echo "/usr/local/flutter/bin" >> $GITHUB_PATH
+          flutter --version
+
       - name: 🛠️ 构建 x86_64 架构 APK
         run: |
           flutter build apk --release --target-platform android-x64
@@ -103,6 +126,14 @@ jobs:
     runs-on: ubuntu-latest
     needs: setup
     steps:
+      - name: 🛠️ 检出代码仓库
+        uses: actions/checkout@v4
+
+      - name: 🐦 设置 Flutter
+        run: |
+          echo "/usr/local/flutter/bin" >> $GITHUB_PATH
+          flutter --version
+
       - name: 🛠️ 构建 arm64-v8a 架构 APK
         run: |
           flutter build apk --release --target-platform android-arm64
@@ -117,6 +148,14 @@ jobs:
     runs-on: ubuntu-latest
     needs: setup
     steps:
+      - name: 🛠️ 检出代码仓库
+        uses: actions/checkout@v4
+
+      - name: 🐦 设置 Flutter
+        run: |
+          echo "/usr/local/flutter/bin" >> $GITHUB_PATH
+          flutter --version
+
       - name: 🛠️ 构建 armeabi-v7a 架构 APK
         run: |
           flutter build apk --release --target-platform android-arm
