--- a/.github/workflows/android-build-all.yaml
+++ b/.github/workflows/android-build-all.yaml
@@ -49,10 +49,7 @@ jobs:
       - name: 🐦 安装 Flutter
         run: |
           git clone https://github.com/flutter/flutter.git -b stable $HOME/flutter
-          export PATH="$HOME/flutter/bin:$PATH"
-          echo "PATH: $PATH"
-          which flutter
-          chmod +x $HOME/flutter/bin/flutter
+          echo "$HOME/flutter/bin" >> $GITHUB_PATH
           flutter --version
 
       - name: 📚 安装 Flutter 依赖
@@ -64,9 +61,6 @@ jobs:
 
       - name: 🐦 设置 Flutter
         run: |
-          export PATH="$HOME/flutter/bin:$PATH"
-          echo "PATH: $PATH"
-          which flutter
           flutter --version
 
       - name: 🛠️ 构建全架构 APK (ALL)
@@ -78,5 +72,3 @@ jobs:
         with:
           name: app-release-all
           path: build/app/outputs/flutter-apk/app-release.apk
-
-
