--- a/.github/workflows/android-build-all.yaml
+++ b/.github/workflows/android-build-all.yaml
@@ -71,6 +71,8 @@ jobs:
 
       - name: 📤 上传全架构 APK (ALL)
         uses: actions/upload-artifact@v4
-        with:
-          name: app-release-all
+        with:  
+          name: app-release-all.apk
           path: build/app/outputs/flutter-apk/app-release.apk
+          retention-days: 1
+          if-no-files-found: error
