--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -42,7 +42,7 @@ jobs:
       - name: 📂 复制 DLL 文件到 Release 目录
         run: |
           echo "正在复制 DLL 文件到 Release 目录..."
-          $dllSourceDir = "$env:GITHUB_WORKSPACE\astral\tree\main\assets\dlls"
+          $dllSourceDir = "$env:GITHUB_WORKSPACE\assets\dlls"
           $releaseDir = "$env:GITHUB_WORKSPACE\build\windows\x64\runner\Release"
           Copy-Item -Path "$dllSourceDir\*" -Destination $releaseDir -Recurse -Force
           echo "DLL 文件已复制到 $releaseDir！"
