--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -24,3 +24,7 @@ jobs:
           path: ./downloaded-apks
           workflow: "🛠️ Android 构建 armeabi-v7a 架构 APK"  # 替换为你要下载的工作流名称
           run_id: latest  # 下载最新运行的构建
+      - name: 📝 列出下载的文件
+        run: |
+          echo "已下载的文件列表:"
+          ls -la ./downloaded-apks
