--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -97,11 +97,16 @@ jobs:
               # 设置模型和生成参数
               model = genai.GenerativeModel('gemini-1.5-flash')
               prompt = f"""
-              请根据以下Git提交记录，生成一份用户友好的更新日志。
-              将内容分类为"新功能"、"改进"、"修复"等类别。
-              使用简洁明了的中文描述每项变更。
+              🔧 这是一个错误修复版本 ✨
+
+              请把这些提交记录变成一份可爱的更新日志吧~ 🌸
+
+              要求如下哦：
+              ✨ 用可爱温暖的语气介绍每个修复内容呢~
+              🎀 记得说明是哪位可爱的开发者小伙伴贡献的呢！
+              🌟 要让每个修复都像小故事一样有趣，让大家看了都开心！
               
-              提交记录:
+              💝 这是我们的提交记录啦：
               {commits}
               """
               
