--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -138,9 +138,7 @@ jobs:
               🔧 这是一个错误修复版本 ✨
               请把这些提交记录变成一份的更新日志
               要求如下哦：
-              ✨ 用可爱的语气介绍每个修复内容呢~
-              🎀 记得说明是哪位开发者贡献的呢！
-              
+              ✨ 介绍主要修复内容
               💝 这是我们的提交记录：
               {commits}
               """
