--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -135,12 +135,19 @@ jobs:
               # 设置模型和生成参数
               model = genai.GenerativeModel('gemini-1.5-flash')
               prompt = f"""
-              🔧 这是一个错误修复版本 ✨
-              请把这些提交记录变成一份的更新日志
-              要求如下哦：
-              ✨ 介绍主要修复内容
-              💝 这是我们的提交记录：
+              请根据以下提交记录生成更新日志：
+
+              ## 提交记录
               {commits}
+
+              要求：
+              1. 使用简洁的标题概括主要更新
+              2. 按以下分类整理更新内容：
+                 - 🚀 新功能
+                 - 🔧 修复
+                 - 🌟 优化
+              3. 每项内容简明扼要
+              4. 使用项目符号列表
               """
               
               # 生成更新日志
