--- a/.github/workflows/android-build-arm64.yaml
+++ b/.github/workflows/android-build-arm64.yaml
@@ -3,8 +3,8 @@ name: 🛠️ Android 构建 arm64-v8a 架构 APK
 on:
   workflow_dispatch:
   push:  # 每次 push 到仓库时触发
-    branches:
-      - auto  # 指定触发分支
+    tags:
+      - 'v*'  # 指定触发分支
 
 jobs:
   setup:
