--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -3,8 +3,8 @@ name: 🛠️ 构建 Windows 应用
 on:
   workflow_dispatch:
   push:  # 每次 push 到仓库时触发
-    branches:
-      - auto  # 指定触发分支
+    tags:
+      - 'v*'   # 指定触发分支
 
 jobs:
   build:
