--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   isar_flutter_libs: ^3.1.0+1
   window_manager: ^0.4.3
   flutter_colorpicker: ^1.1.0
+  flutter_staggered_grid_view: ^0.7.0
 
 dev_dependencies:
   flutter_test:
