--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -9,6 +9,7 @@
 # packages, and plugins designed to encourage good coding practices.
 analyzer:
   errors:
+    collection_methods_unrelated_type: ignore
     file_names: ignore
     non_constant_identifier_names: ignore
 include: package:flutter_lints/flutter.yaml
