--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -39,9 +39,9 @@ jobs:
       - name: 🛠️ 编译 Flutter Windows 应用
         run: |
           echo "正在编译 Flutter Windows Release 版本..."
-          flutter build windows --release \
-            --obfuscate \
-            --split-debug-info=build/symbols \
+          flutter build windows --release `
+            --obfuscate `
+            --split-debug-info=build/symbols `
             --dart-define=SENTRY_DSN=${{ secrets.SENTRY_DSN }}
           echo "Flutter Windows Release 编译完成！"
 
