--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   app_links: ^6.4.0
   sentry_flutter: ^8.14.2
   flutter_dotenv: ^5.2.1
+  win32: ^5.12.0
 
 dev_dependencies:
   flutter_test:
