--- a/rust/easytier/Cargo.toml
+++ b/rust/easytier/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "easytier"
-description = "A full meshed p2p VPN, connecting all your devices in one network with one command."
+description = ""
 homepage = "https://github.com/EasyTier/EasyTier"
 repository = "https://github.com/EasyTier/EasyTier"
 version = "2.2.4"
@@ -250,6 +250,13 @@ prost-reflect-build = { version = "0.14.0" }
 [target.'cfg(windows)'.build-dependencies]
 reqwest = { version = "0.12.12", features = ["blocking"] }
 zip = "0.6.6"
+
+# enable thunk-rs when compiling for x86_64 or i686 windows
+[target.x86_64-pc-windows-msvc.build-dependencies]
+thunk-rs = { git = "https://github.com/easytier/thunk.git", default-features = false, features = ["win7"] }
+
+[target.i686-pc-windows-msvc.build-dependencies]
+thunk-rs = { git = "https://github.com/easytier/thunk.git", default-features = false, features = ["win7"] }
 
 
 [dev-dependencies]
