ci(ios-build): 将运行器从self-hosted更改为macos-latest
为了简化iOS构建流程并确保使用最新的macOS环境，将运行器从self-hosted更改为macos-latest。这将提高构建的可靠性和一致性。

--- a/.github/workflows/ios-build.yaml
+++ b/.github/workflows/ios-build.yaml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    runs-on: self-hosted  # 使用支持 iOS 构建的运行器
+    runs-on: macos-latest  # 使用 
     permissions:
       contents: write
       packages: write
