--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -19,6 +19,7 @@ tokio = "1.39.2"
 anyhow = "1.0.95"
 surge-ping = "0.8"
 easytier = { path = "./easytier" }
+windows = { version = "0.48", features = ["Win32_NetworkManagement_WindowsFirewall", "Win32_System_Com","implement"] }
 winapi = { version = "0.3", features = ["iphlpapi", "iptypes", "netioapi", "winerror", "ws2def"] }
 rand = "0.9.1"
 
