--- a/.github/workflows/android-build-arm64.yaml
+++ b/.github/workflows/android-build-arm64.yaml
@@ -81,6 +81,10 @@ jobs:
         run: |
           flutter --version
 
+      - name: 🦀 安装 cargo-ndk
+        run: |
+          cargo install cargo-ndk
+
       - name: 🦀 构建 Rust NDK (arm64-v8a)
         run: |
           cd rust
