--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,8 @@
             "type": "dart",
             "flutterMode": "debug",
             "args": [
-                "install --debug",
+                "--no-build",
+        "--use-application-binary=build/app/outputs/flutter-apk/app-debug.apk"
             ]
         },
         {
