--- a/.github/workflows/windows-build-Setup.yml
+++ b/.github/workflows/windows-build-Setup.yml
@@ -71,24 +71,29 @@ jobs:
           $scriptContent = @"
           ; Inno Setup 脚本文件
           #define MyAppName "Astral"
-          #define MyAppVersion "$version"
-          #define MyAppPublisher "Astral Team"
-          #define MyAppURL "https://github.com/yourusername/astral"
+          #define MyAppVersion "2.0.0-beta.83"
+          #define MyAppPublisher "kevin"
+          #define MyAppURL "https://astral.fan/"
           #define MyAppExeName "astral.exe"
+          #define MyAppAssocName MyAppName + "文件"
+          #define MyAppAssocExt ".Astral"
+          #define MyAppAssocKey StringChange(MyAppAssocName, " ", "") + MyAppAssocExt
 
           [Setup]
-          AppId={{GUID-FOR-YOUR-APP}}
+          AppId={{9A41EC10-FBE6-4B63-8B18-A466907374B5}
           AppName={#MyAppName}
           AppVersion={#MyAppVersion}
           AppPublisher={#MyAppPublisher}
           AppPublisherURL={#MyAppURL}
           AppSupportURL={#MyAppURL}
           AppUpdatesURL={#MyAppURL}
-          DefaultDirName={autopf}\{#MyAppName}
-          DefaultGroupName={#MyAppName}
-          OutputDir=$env:GITHUB_WORKSPACE
-          OutputBaseFilename=astral-setup-{#MyAppVersion}
-          Compression=lzma
+          DefaultDirName={autopf}\\{#MyAppName}
+          UninstallDisplayIcon={app}\\{#MyAppExeName}
+          ArchitecturesAllowed=x64compatible
+          ArchitecturesInstallIn64BitMode=x64compatible
+          ChangesAssociations=yes
+          DisableProgramGroupPage=yes
+          OutputBaseFilename=Astralsetup
           SolidCompression=yes
           WizardStyle=modern
 
@@ -96,19 +101,36 @@ jobs:
           Name: "chinese"; MessagesFile: "compiler:Languages\ChineseSimplified.isl"
 
           [Tasks]
-          Name: "desktopicon"; Description: "创建桌面图标"; GroupDescription: "附加图标:"; Flags: unchecked
+          Name: "desktopicon"; Description: "{cm:CreateDesktopIcon}"; GroupDescription: "{cm:AdditionalIcons}"
 
           [Files]
-          Source: "$env:GITHUB_WORKSPACE\build\windows\x64\runner\Release\*"; DestDir: "{app}"; Flags: ignoreversion recursesubdirs createallsubdirs
+          Source: "$env:GITHUB_WORKSPACE\build\windows\x64\runner\Release\{#MyAppExeName}"; DestDir: "{app}"; Flags: ignoreversion
+          Source: "$env:GITHUB_WORKSPACE\build\windows\x64\runner\Release\Ak.dll"; DestDir: "{app}"; Flags: ignoreversion
+          Source: "$env:GITHUB_WORKSPACE\build\windows\x64\runner\Release\app_links_plugin.dll"; DestDir: "{app}"; Flags: ignoreversion
+          Source: "$env:GITHUB_WORKSPACE\build\windows\x64\runner\Release\flutter_localization_plugin.dll"; DestDir: "{app}"; Flags: ignoreversion
+          Source: "$env:GITHUB_WORKSPACE\build\windows\x64\runner\Release\flutter_windows.dll"; DestDir: "{app}"; Flags: ignoreversion
+          Source: "$env:GITHUB_WORKSPACE\build\windows\x64\runner\Release\isar.dll"; DestDir: "{app}"; Flags: ignoreversion
+          Source: "$env:GITHUB_WORKSPACE\build\windows\x64\runner\Release\isar_flutter_libs_plugin.dll"; DestDir: "{app}"; Flags: ignoreversion
+          Source: "$env:GITHUB_WORKSPACE\build\windows\x64\runner\Release\Packet.dll"; DestDir: "{app}"; Flags: ignoreversion
+          Source: "$env:GITHUB_WORKSPACE\build\windows\x64\runner\Release\rust_lib_astral.dll"; DestDir: "{app}"; Flags: ignoreversion
+          Source: "$env:GITHUB_WORKSPACE\build\windows\x64\runner\Release\screen_retriever_windows_plugin.dll"; DestDir: "{app}"; Flags: ignoreversion
+          Source: "$env:GITHUB_WORKSPACE\build\windows\x64\runner\Release\sentry.dll"; DestDir: "{app}"; Flags: ignoreversion
+          Source: "$env:GITHUB_WORKSPACE\build\windows\x64\runner\Release\system_tray_plugin.dll"; DestDir: "{app}"; Flags: ignoreversion
+          Source: "$env:GITHUB_WORKSPACE\build\windows\x64\runner\Release\url_launcher_windows_plugin.dll"; DestDir: "{app}"; Flags: ignoreversion
+          Source: "$env:GITHUB_WORKSPACE\build\windows\x64\runner\Release\window_manager_plugin.dll"; DestDir: "{app}"; Flags: ignoreversion
+          Source: "$env:GITHUB_WORKSPACE\build\windows\x64\runner\Release\wintun.dll"; DestDir: "{app}"; Flags: ignoreversion
+          Source: "$env:GITHUB_WORKSPACE\build\windows\x64\runner\Release\data\*"; DestDir: "{app}\data"; Flags: ignoreversion recursesubdirs createallsubdirs
+
+          [Registry]
+          Root: HKA; Subkey: "Software\Classes\{#MyAppAssocExt}\OpenWithProgids"; ValueType: string; ValueName: "{#MyAppAssocKey}"; ValueData: ""; Flags: uninsdeletevalue
+          Root: HKA; Subkey: "Software\Classes\{#MyAppAssocKey}"; ValueType: string; ValueName: ""; ValueData: "{#MyAppAssocName}"; Flags: uninsdeletekey
+          Root: HKA; Subkey: "Software\Classes\{#MyAppAssocKey}\DefaultIcon"; ValueType: string; ValueName: ""; ValueData: "{app}\{#MyAppExeName},0"
+          Root: HKA; Subkey: "Software\Classes\{#MyAppAssocKey}\shell\open\command"; ValueType: string; ValueName: ""; ValueData: """{app}\{#MyAppExeName}"" ""%1"""
 
           [Icons]
-          Name: "{group}\{#MyAppName}"; Filename: "{app}\{#MyAppExeName}"
+          Name: "{autoprograms}\{#MyAppName}"; Filename: "{app}\{#MyAppExeName}"
           Name: "{autodesktop}\{#MyAppName}"; Filename: "{app}\{#MyAppExeName}"; Tasks: desktopicon
-
-          [Run]
-          Filename: "{app}\{#MyAppExeName}"; Description: "启动 {#MyAppName}"; Flags: nowait postinstall skipifsilent
           "@
-
           $scriptContent | Out-File -FilePath "$env:GITHUB_WORKSPACE\setup.iss" -Encoding utf8
           echo "Inno Setup 脚本已创建！"
 
