feat: 添加自动更新功能及相关设置
添加了自动更新功能，包括以下改进：
1. 新增设置项：参与测试版、自动检查更新、下载加速地址
2. 重构更新检查逻辑，支持测试版更新
3. 添加文件下载和安装功能
4. 更新设置页面UI，新增相关设置选项
5. 修复Windows构建脚本中的AppId格式问题
6. 禁用服务器UDP协议支持

--- a/.github/workflows/windows-build-Setup-cmd.yml
+++ b/.github/workflows/windows-build-Setup-cmd.yml
@@ -1,4 +1,4 @@
-name: 🪟 构建 WindowsSetup 应用
+name: 🪟 构建 WindowsSetupCmd 应用
 
 on:
   workflow_dispatch:
@@ -121,7 +121,6 @@ jobs:
           Source: "$env:GITHUB_WORKSPACE\build\windows\x64\runner\Release\window_manager_plugin.dll"; DestDir: "{app}"; Flags: ignoreversion
           Source: "$env:GITHUB_WORKSPACE\build\windows\x64\runner\Release\wintun.dll"; DestDir: "{app}"; Flags: ignoreversion
           Source: "$env:GITHUB_WORKSPACE\build\windows\x64\runner\Release\data\*"; DestDir: "{app}\data"; Flags: ignoreversion recursesubdirs createallsubdirs
-
           [Registry]
           Root: HKA; Subkey: "Software\Classes\{#MyAppAssocExt}\OpenWithProgids"; ValueType: string; ValueName: "{#MyAppAssocKey}"; ValueData: ""; Flags: uninsdeletevalue
           Root: HKA; Subkey: "Software\Classes\{#MyAppAssocKey}"; ValueType: string; ValueName: ""; ValueData: "{#MyAppAssocName}"; Flags: uninsdeletekey
