--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -20,7 +20,7 @@ anyhow = "1.0.95"
 surge-ping = "0.8"
 easytier = { path = "./easytier" }
 # easytier = { git = "https://github.com/ldoubil/EasyTier", branch = "main" }
-windows = { version = "0.48.0", features = [
+windows = { version = "0.52.0", features = [
     "Win32_NetworkManagement_WindowsFirewall",
     "Win32_System_Com", 
     "Win32_NetworkManagement_IpHelper",
@@ -32,7 +32,7 @@ windows = { version = "0.48.0", features = [
     "Win32_Security",
     "Win32_System_Threading",
     "Win32_Storage_FileSystem",
-    "Win32_System_Rpc"  # Add this line
+    "Win32_System_Rpc"
 ] }
 widestring = { version = "1.0.2", default-features = false, features = ["alloc"] }
 winapi = { version = "0.3.9", features = [
