--- a/.github/workflows/android-build-all.yaml
+++ b/.github/workflows/android-build-all.yaml
@@ -34,11 +34,15 @@ jobs:
           sudo apt-get install -y libc-dev
           sudo apt-get install -y libc6-dev-i386
           sudo apt-get install -y protobuf-compiler
+          # 安装 Android NDK 工具链
+          sudo apt-get install -y gcc-multilib g++-multilib
 
       - name: 🎯 配置 Rust 目标架构
         run: |
           rustup target add armv7-linux-androideabi
           rustup target add aarch64-linux-android
+          rustup target add i686-linux-android
+          rustup target add x86_64-linux-android
 
       - name: ☕ 设置 JDK 17
         uses: actions/setup-java@v3
@@ -52,6 +56,12 @@ jobs:
           ndk-version: '27.2.12479018'
           cmake-version: '3.18.1'
 
+      - name: 🔧 配置 Android NDK 环境变量
+        run: |
+          echo "ANDROID_NDK_ROOT=$ANDROID_NDK_ROOT" >> $GITHUB_ENV
+          echo "ANDROID_NDK_HOME=$ANDROID_NDK_ROOT" >> $GITHUB_ENV
+          echo "NDK_HOME=$ANDROID_NDK_ROOT" >> $GITHUB_ENV
+
       - name: 🐦 安装 Flutter
         run: |
           git clone https://github.com/flutter/flutter.git --branch 3.29.3 $HOME/flutter --depth 1
@@ -63,6 +73,16 @@ jobs:
       - name: 📚 安装 Flutter 依赖
         run: |
           flutter pub get
+
+      - name: 🦀 安装 cargo-ndk
+        run: |
+          cargo install cargo-ndk
+          # 创建 Rust 工具链配置
+          cat > rust/rust-toolchain.toml << EOF
+          [toolchain]
+          channel = "stable"
+          targets = ["armv7-linux-androideabi", "aarch64-linux-android", "i686-linux-android", "x86_64-linux-android"]
+          EOF
 
       - name: 🔐 设置签名配置
         run: |
@@ -82,7 +102,22 @@ jobs:
           flutter --version
 
       - name: 🛠️ 构建全架构 APK (ALL)
+        env:
+          ANDROID_NDK_HOME: ${{ env.ANDROID_NDK_ROOT }}
+          NDK_HOME: ${{ env.ANDROID_NDK_ROOT }}
         run: |
+          # 配置 Android NDK 工具链
+          export PATH="$ANDROID_NDK_ROOT/toolchains/llvm/prebuilt/linux-x86_64/bin:$PATH"
+          
+          # 验证工具链
+          echo "检查 NDK 工具链:"
+          ls -la "$ANDROID_NDK_ROOT/toolchains/llvm/prebuilt/linux-x86_64/bin/" | head -10
+          
+          # 清理之前的构建产物
+          flutter clean
+          cd rust && cargo clean && cd ..
+          
+          # 构建全架构 APK
           flutter build apk --release
 
       - name: 📤 上传全架构 APK 到 Artifacts
