--- a/.github/workflows/android-build-x86_64.yaml
+++ b/.github/workflows/android-build-x86_64.yaml
@@ -34,11 +34,15 @@ jobs:
           sudo apt-get install -y libc-dev
           sudo apt-get install -y libc6-dev-i386
           sudo apt-get install -y protobuf-compiler
+          # 安装 Android NDK 工具链
+          sudo apt-get install -y gcc-multilib g++-multilib
 
       - name: 🎯 配置 Rust 目标架构
         run: |
           rustup target add armv7-linux-androideabi
           rustup target add aarch64-linux-android
+          rustup target add i686-linux-android
+          rustup target add x86_64-linux-android
 
       - name: ☕ 设置 JDK 17
         uses: actions/setup-java@v3
@@ -50,7 +54,13 @@ jobs:
         uses: android-actions/setup-android@v3
         with:
           ndk-version: '27.2.12479018'
-          cmake-version: '4.0.2'
+          cmake-version: '3.18.1'
+
+      - name: 🔧 配置 Android NDK 环境变量
+        run: |
+          echo "ANDROID_NDK_ROOT=$ANDROID_NDK_ROOT" >> $GITHUB_ENV
+          echo "ANDROID_NDK_HOME=$ANDROID_NDK_ROOT" >> $GITHUB_ENV
+          echo "NDK_HOME=$ANDROID_NDK_ROOT" >> $GITHUB_ENV
 
       - name: 🐦 安装 Flutter
         run: |
@@ -63,6 +73,16 @@ jobs:
       - name: 📚 安装 Flutter 依赖
         run: |
           flutter pub get
+
+      - name: 🦀 安装 cargo-ndk
+        run: |
+          cargo install cargo-ndk
+          # 创建 Rust 工具链配置
+          cat > rust/rust-toolchain.toml << EOF
+          [toolchain]
+          channel = "stable"
+          targets = ["armv7-linux-androideabi", "aarch64-linux-android", "i686-linux-android", "x86_64-linux-android"]
+          EOF
           
       - name: 🔐 设置签名配置
         run: |
@@ -82,11 +102,30 @@ jobs:
           flutter --version
 
       - name: 🛠️ 构建 x86_64 架构 APK
+        env:
+          CARGO_BUILD_TARGET: x86_64-linux-android
+          ANDROID_NDK_HOME: ${{ env.ANDROID_NDK_ROOT }}
+          NDK_HOME: ${{ env.ANDROID_NDK_ROOT }}
         run: |
-          flutter build apk --debug --target-platform android-x64
+          # 配置 Android NDK 工具链
+          export PATH="$ANDROID_NDK_ROOT/toolchains/llvm/prebuilt/linux-x86_64/bin:$PATH"
+          export CC_x86_64_linux_android="$ANDROID_NDK_ROOT/toolchains/llvm/prebuilt/linux-x86_64/bin/x86_64-linux-android21-clang"
+          export AR_x86_64_linux_android="$ANDROID_NDK_ROOT/toolchains/llvm/prebuilt/linux-x86_64/bin/llvm-ar"
+          export CARGO_TARGET_X86_64_LINUX_ANDROID_LINKER="$ANDROID_NDK_ROOT/toolchains/llvm/prebuilt/linux-x86_64/bin/x86_64-linux-android21-clang"
+          
+          # 验证工具链
+          echo "检查 NDK 工具链:"
+          ls -la "$ANDROID_NDK_ROOT/toolchains/llvm/prebuilt/linux-x86_64/bin/" | head -10
+          
+          # 清理之前的构建产物
+          flutter clean
+          cd rust && cargo clean && cd ..
+          
+          # 构建 x86_64 架构 APK
+          flutter build apk --release --target-platform android-x64
 
       - name: 📤 上传 x86_64 架构 APK 到 Artifacts
         uses: actions/upload-artifact@v4
         with:
           name: app-release-x86_64
-          path: build/app/outputs/flutter-apk/app-debug.apk
+          path: build/app/outputs/flutter-apk/app-release.apk
