--- a/.github/workflows/windows-build-Setup.yml
+++ b/.github/workflows/windows-build-Setup.yml
@@ -94,7 +94,7 @@ jobs:
           ArchitecturesInstallIn64BitMode=x64compatible
           ChangesAssociations=yes
           DisableProgramGroupPage=yes
-          OutputBaseFilename=Astralsetup
+          OutputBaseFilename=astral-windows-x64-setup
           SolidCompression=yes
           WizardStyle=modern
 
@@ -133,13 +133,11 @@ jobs:
           & "C:\Program Files (x86)\Inno Setup 6\ISCC.exe" "$env:GITHUB_WORKSPACE\setup.iss"
           echo "Inno Setup 安装程序编译完成！"
 
-
-
       # 上传 Inno Setup 安装程序作为 Artifact
       - name: 📤 上传 Inno Setup 安装程序
         uses: actions/upload-artifact@v4
         with:
           name: astral-windows-x64-setup
-          path: ${{ github.workspace }}/Output/Astralsetup.exe
+          path: ${{ github.workspace }}/Output/astral-windows-x64-setup.exe
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
