--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -63,7 +63,7 @@ jobs:
         run: |
           echo "正在压缩 Release 目录..."
           $releaseDir = "$env:GITHUB_WORKSPACE\build\windows\x64\runner\Release"
-          $zipFile = "$env:GITHUB_WORKSPACE\astral-windows.zip"
+          $zipFile = "$env:GITHUB_WORKSPACE\astral-windows-x64-zip.zip"
           Compress-Archive -Path "$releaseDir\*" -DestinationPath $zipFile -Force
           echo "Release 目录已压缩为 $zipFile！"
 
@@ -72,4 +72,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: astral-windows-x64-zip
-          path: ${{ github.workspace }}/astral-windows.zip
+          path: ${{ github.workspace }}/astral-windows-x64-zip.zip
