feat(logging): implement file logging system with global error handling
- Added FileLogger for logging messages to a file in the executable directory.
- Implemented GlobalErrorHandler to capture and log Flutter framework errors and uncaught async errors.
- Integrated logging into the main application flow, ensuring all errors and warnings are logged.
- Updated application initialization to include logging setup and error handling.
- Removed unused graphview package and replaced it with vyuh_node_flow for network topology visualization.
- Added README documentation for the logging system detailing its features and usage.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: astral
 description: 'astral'
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 2.6.98
+version: 2.6.99
 
 isar_version: &isar_version 3.3.0 # define the version to be used
 
@@ -32,7 +32,7 @@ dependencies:
   flutter_localization: ^0.3.2
   flutter_localizations:
     sdk: flutter
-  graphview: ^1.2.0
+  vyuh_node_flow: ^0.22.2
   device_info_plus: ^11.4.0
   toml: ^0.16.0
   isar_community:
